flex/engines/graph_db/grin/include/rust/grin_all.rs

extern "C" {
    pub fn grin_get_many_to_one_vev_types(arg1: GRIN_GRAPH) -> GRIN_VEV_TYPE_LIST;
}
extern "C" {
    pub fn grin_get_many_to_many_vev_types(arg1: GRIN_GRAPH) -> GRIN_VEV_TYPE_LIST;
}
extern "C" {
    #[doc = " @brief Get the vertex types that have primary keys\n In some graph, not every vertex type has primary keys.\n @param GRIN_GRAPH The graph\n @return The vertex type list of types that have primary keys"]
    pub fn grin_get_vertex_types_with_primary_keys(arg1: GRIN_GRAPH) -> GRIN_VERTEX_TYPE_LIST;
}
extern "C" {
    #[doc = " @brief Get the primary keys properties of a vertex type\n The primary keys properties are the properties that can be used to identify a vertex.\n They are a subset of the properties of a vertex type.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_TYPE The vertex type\n @return The primary keys properties list"]
    pub fn grin_get_primary_keys_by_vertex_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
    ) -> GRIN_VERTEX_PROPERTY_LIST;
}
extern "C" {
    #[doc = " @brief Get the primary keys values row of a vertex\n The values in the row are in the same order as the primary keys properties.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @return The primary keys values row"]
    pub fn grin_get_vertex_primary_keys_row(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX) -> GRIN_ROW;
}
extern "C" {
    pub fn grin_get_edge_types_with_primary_keys(arg1: GRIN_GRAPH) -> GRIN_EDGE_TYPE_LIST;
}
extern "C" {
    pub fn grin_get_primary_keys_by_edge_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
    ) -> GRIN_EDGE_PROPERTY_LIST;
}
extern "C" {
    pub fn grin_get_edge_primary_keys_row(arg1: GRIN_GRAPH, arg2: GRIN_EDGE) -> GRIN_ROW;
}
extern "C" {
    pub fn grin_destroy_string_value(arg1: GRIN_GRAPH, arg2: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " @brief Get the vertex property name\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_TYPE The vertex type that the property belongs to\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The property's name as string"]
    pub fn grin_get_vertex_property_name(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Get the vertex property with a given name under a specific vertex type\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_TYPE The specific vertex type\n @param name The name\n @return The vertex property"]
    pub fn grin_get_vertex_property_by_name(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        name: *const ::std::os::raw::c_char,
    ) -> GRIN_VERTEX_PROPERTY;
}
extern "C" {
    #[doc = " @brief Get properties under all types with a given name.\n For example, vertex type \"person\" and \"company\" both have a property\n called \"name\". When this API is called given \"name\", it will return a list\n of \"name\" properties under both types.\n @param GRIN_GRAPH The graph\n @param name The name\n @return The vertex property list of properties with the given name"]
    pub fn grin_get_vertex_properties_by_name(
        arg1: GRIN_GRAPH,
        name: *const ::std::os::raw::c_char,
    ) -> GRIN_VERTEX_PROPERTY_LIST;
}
extern "C" {
    pub fn grin_get_edge_property_name(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn grin_get_edge_property_by_name(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
        name: *const ::std::os::raw::c_char,
    ) -> GRIN_EDGE_PROPERTY;
}
extern "C" {
    pub fn grin_get_edge_properties_by_name(
        arg1: GRIN_GRAPH,
        name: *const ::std::os::raw::c_char,
    ) -> GRIN_EDGE_PROPERTY_LIST;
}
extern "C" {
    pub fn grin_equal_vertex_property(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_PROPERTY,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> bool;
}
extern "C" {
    pub fn grin_destroy_vertex_property(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX_PROPERTY);
}
extern "C" {
    #[doc = " @brief Get the datatype of the vertex property\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The datatype of the vertex property"]
    pub fn grin_get_vertex_property_datatype(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_PROPERTY,
    ) -> GRIN_DATATYPE;
}
extern "C" {
    #[doc = " @brief Get the value of int32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype int32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_int32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the value of uint32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype uint32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_uint32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = " @brief Get the value of int64, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype int64.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_int64(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    #[doc = " @brief Get the value of uint64, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype uint64.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_uint64(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> ::std::os::raw::c_ulonglong;
}
extern "C" {
    #[doc = " @brief Get the value of float, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype float.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_float(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> f32;
}
extern "C" {
    #[doc = " @brief Get the value of double, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype double.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_double(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> f64;
}
extern "C" {
    #[doc = " @brief Get the value of string, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype string.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n Note that the returned string should be explicitly freed by the user,\n by calling API ``grin_destroy_string_value``.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_string(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Get the value of int32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype date32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_date32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the value of int32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype time32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n Note that the returned string should be explicitly freed by the user,\n by calling API ``grin_destroy_string_value``.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_time32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the value of int64, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype timestamp64.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n Note that the returned string should be explicitly freed by the user,\n by calling API ``grin_destroy_string_value``.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The value of the property"]
    pub fn grin_get_vertex_property_value_of_timestamp64(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    #[doc = " @brief Get the vertex type that a given vertex property belongs to.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_PROPERTY The vertex property\n @return The vertex type"]
    pub fn grin_get_vertex_type_from_property(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_PROPERTY,
    ) -> GRIN_VERTEX_TYPE;
}
extern "C" {
    pub fn grin_get_vertex_property_value(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn grin_equal_edge_property(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_PROPERTY,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> bool;
}
extern "C" {
    pub fn grin_destroy_edge_property(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_PROPERTY);
}
